# robotics

./: .gitignore
tasks/ex01/: .bashrc
tasks/ex03/ros3/: CMakeLists.txt  package.xml
tasks/ex05/: rosnode_list.txt
tasks/ex08/: three_turtles.launch
tasks/exercises0_1/ex01/: commands.txt
tasks/exercises0_1/ex03/ros3/: ros3Config.cmake.in  ros3ConfigVersion.cmake.in
tasks/exercises0_1/ex04/: colcon_build.txt
tasks/exercises0_1/ex05/: rosnode_info.txt
tasks/exercises0_1/ex06/: cmd_vel.txt
tasks/exercises0_1/ex08/: rqt_console.csv
tasks/exercises0_1/ex09/ros4/: CMakeLists.txt  package.xml
tasks/exercises0_1/ex10/text_to_cmd_vel/: package.xml  setup.py
tasks/exercises0_1/ex10/text_to_cmd_vel/text_to_cmd_vel/: text_to_cmd_vel_sub.py
tasks/exercises3/ex01/service_full_name/: CMakeLists.txt  package.xml
tasks/exercises3/ex01/service_full_name/msg/: SummFullName.msg
tasks/exercises3/ex01/service_full_name/src/: full_name_client.cpp  full_name_server.cpp
tasks/exercises3/ex01/service_full_name/srv/: SummFullName.srv
tasks/exercises3/ex02/: .gitignore
tasks/exercises3/ex02/bag_files/turtle_cmd_vel/: metadata.yaml  pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel_0.mcap
tasks/exercises3/ex04/move_to_goal/: CMakeLists.txt  package.xml
tasks/exercises3/ex04/move_to_goal/src/: move_to_goal.cpp
tasks/exercises3/ex05/cleaning_robot/: CMakeLists.txt  package.xml
tasks/exercises3/ex05/cleaning_robot/action/: CleaningTask.action
tasks/exercises3/ex05/cleaning_robot/src/: cleaning_action_client.cpp  cleaning_action_server.cpp
tasks/exercises4/ex01/: frames.gv  last_transform.txt  transform.txt
tasks/exercises4/ex02/follow_carrot/: CMakeLists.txt  package.xml
tasks/exercises4/ex02/follow_carrot/src/: carrot_broadcaster.cpp  spawn_turtle.cpp  turtle_follower.cpp
tasks/exercises4/ex02b/multi_follow_carrot/: CMakeLists.txt  package.xml
tasks/exercises4/ex02b/multi_follow_carrot/rviz/: carrot.rviz
tasks/exercises4/ex02b/multi_follow_carrot/src/: carrot_broadcaster.cpp  spawn_turtle.cpp  target_switcher.cpp  turtle_controller.cpp  turtle_tf2_broadcaster.cpp
tasks/exercises4/ex03/follow_turtle/: CMakeLists.txt  package.xml
tasks/exercises4/ex03/follow_turtle/scripts/: spawn_turtle.py
tasks/exercises4/ex03/follow_turtle/src/: turtle_tf2_broadcaster.cpp  turtle_time_travel_listener.cpp  turtle_time_travel_listener_old.cpp
tasks/exercises5/ex01_02/botbot/: package.xml  setup.cfg  setup.py
tasks/exercises5/ex01_02/botbot/rviz/: urdf_config.rviz
tasks/exercises5/ex01_02/botbot/urdf/: robot.urdf  robot.urdf.xacro
tasks/exercises5/ex03/botbot_gz/: package.xml  setup.cfg  setup.py
tasks/exercises5/ex03/botbot_gz/rviz/: urdf_config.rviz
tasks/exercises5/ex03/botbot_gz/urdf/: robot_gz.urdf
tasks/exercises5/ex03/botbot_gz/worlds/: empty.sdf
tasks/exercises5/ex04/: README.md
tasks/exercises5/ex04/botbot_circle_controller/: package.xml  setup.cfg  setup.py
tasks/exercises5/ex04/botbot_circle_controller/botbot_circle_controller/: circle_controller.py
tasks/exercises5/ex04/botbot_circle_controller/resource/: botbot_circle_controller
tasks/exercises5/ex05/: README.md
tasks/exercises5/ex05/botbot_hat/: package.xml  setup.cfg  setup.py
tasks/exercises5/ex05/botbot_hat/resource/: botbot_hat
tasks/exercises5/ex05/botbot_hat/urdf/: botbot_hat.urdf
tasks/exercises6/: README.md
tasks/exercises6/botbot_lidar/: README.md  package.xml  setup.cfg  setup.py
tasks/exercises6/botbot_lidar/botbot_lidar/: controller.py  stopper.py
tasks/exercises6/botbot_lidar/resource/: botbot_lidar
tasks/exercises6/botbot_lidar/rviz/: botbot_lidar.rviz
tasks/exercises6/botbot_lidar/urdf/: botbot_lidar.urdf
tasks/exercises6/botbot_lidar/worlds/: gpu_lidar_sensor.sdf
