<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros3</name>
  <version>0.0.0</version>
  <description>NO FKN WAY</description>
  <maintainer email="a.spirkin@g.nsu.ru">a.spirkin</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
