<?xml version="1.0"?>
<package format="3">
  <name>botbot_lidar</name>
  <version>0.0.2</version>
  <description>Launch botbot (URDF) in Gazebo Sim with a GPU LiDAR and visualize /scan in RViz.</description>

  <maintainer email="a.spirkin@g.nsu.ru">a.spirkin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
