<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>text_to_cmd_vel</name>
  <version>0.0.0</version>
  <description>Subscriber to /turtle1/cmd_vel to easily control your stupid ahh turtle.</description>
  <maintainer email="a.spirkin@g.nsu.ru">a.spirkin</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
